@@ -1,13 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.6.RELEASE</version>
-		<relativePath />
+		<relativePath/>
 	</parent>
 
 	<groupId>com.gigi</groupId>
@@ -31,7 +28,7 @@
 		<spring-boot.version>2.1.6.RELEASE</spring-boot.version>
 		<spring-boot-bom.version>2.1.6.Final-redhat-00004</spring-boot-bom.version>
 		<maven-surefire-plugin.version>2.20</maven-surefire-plugin.version>
-		<fabric8-maven-plugin.version>3.5.40</fabric8-maven-plugin.version>
+		<fabric8-maven-plugin.version>4.4.1</fabric8-maven-plugin.version>
 		<fabric8.openshift.trimImageInContainerSpec>true</fabric8.openshift.trimImageInContainerSpec>
 		<fabric8.skip.build.pom>true</fabric8.skip.build.pom>
 		<fabric8.generator.from>
@@ -92,6 +89,20 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>io.fabric8</groupId>
+				<artifactId>fabric8-maven-plugin</artifactId>
+        <version>3.5.33</version>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<verbose>true</verbose>
+					<fork>true</fork>
+					<argLine>-XX:MaxPermSize=500M</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -101,7 +112,7 @@
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
-			<dependencies />
+			<dependencies/>
 		</profile>
 		<profile>
 			<id>openshift</id>
